# MegaCoref

./: README.md  pyproject.toml
src/megacoref/: coref.py
src/megacoref/dataset/: RawConllDocument.py
src/megacoref/utils/: dataset_parsing.py
