[project]
name = "megacoref"
version = "0.1.0"
description = "Multi-language Coreference Resolution"
authors = [
    {name = "Eduard-Gabriel Poesina"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
    "lightning (>=2.5.2,<3.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "transformers (>=4.53.1,<5.0.0)",
    "pyconll (>=3.2.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch"}
torchvision = {source = "pytorch"}
torchaudio = {source = "pytorch"}

[[tool.poetry.packages]]
include = "megacoref"
from    = "src"